--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
 	"name": "plibv4/longeststring",
+	"prefer-stable": true,
 	"autoload": {
         "classmap": ["src/"]
     },
 	"require-dev": {
-		"vimeo/psalm": "6.x-dev",
-		"phpunit/phpunit": "9.6.x-dev"
+		"vimeo/psalm": "^6",
+		"phpunit/phpunit": "^9"
 	},
 	"scripts": {
 		"test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests",
